chore: add folder structure for database related files

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,26 +3,21 @@
     "42Crunch.vscode-openapi",
     "ban.spellright",
     "DavidAnson.vscode-markdownlint",
-    "dbaeumer.vscode-eslint",
     "eamodio.gitlens",
-    "esbenp.prettier-vscode",
     "GabrielBB.vscode-lombok",
-    "ghmcadams.lintlens",
     "GitHub.vscode-pull-request-github",
     "Gruntfuggly.todo-tree",
     "jebbs.plantuml",
+    "mermade.openapi-lint",
     "mhutchie.git-graph",
     "ms-azuretools.vscode-docker",
-    "Orta.vscode-jest",
     "pflannery.vscode-versionlens",
     "pivotal.vscode-spring-boot",
     "redhat.java",
     "redhat.vscode-xml",
     "redhat.vscode-yaml",
     "ryanluker.vscode-coverage-gutters",
-    "Shan.code-settings-sync",
     "shengchen.vscode-checkstyle",
-    "slevesque.vscode-autohotkey",
     "VisualStudioExptTeam.vscodeintellicode",
     "vscjava.vscode-java-debug",
     "vscjava.vscode-java-dependency",
@@ -31,6 +26,6 @@
     "vscjava.vscode-spring-boot-dashboard",
     "vscjava.vscode-spring-initializr",
     "wmaurer.vscode-jumpy",
-    "yzhang.markdown-all-in-one",
+    "yzhang.markdown-all-in-one"
   ]
 }
