refactor: restore api folder structure

--- a/api/components/responses.yaml
+++ b/api/components/responses.yaml
@@ -3,11 +3,11 @@ NotFound:
   # content:
   #   application/json:
   #     schema:
-  #       $ref: "../api-specification.yml#/components/schemas/Error"
+  #       $ref: "../api-specification.yaml#/components/schemas/Error"
 
 Unauthorized:
   description: Unauthorized
   # content:
   #   application/json:
   #     schema:
-  #       $ref: "../api-specification.yml#/components/schemas/Error"
+  #       $ref: "../api-specification.yaml#/components/schemas/Error"
