--- a/api/components/securitySchemes.yaml
+++ b/api/components/securitySchemes.yaml
@@ -1,12 +1,21 @@
-DevelopmentKey:
+# arbitrary name for the security scheme
+AdminKey:
   type: apiKey
-  name: api_key
+  # can be "header", "query" or "cookie"
   in: header
-UserAuthorizations:
+  # name of the header, query parameter or cookie
+  name: X-ADMIN-API-KEY
+UserAuthorization:
   type: oauth2
   flows:
     implicit:
       authorizationUrl: "https://domain.test/api/oauth/dialog"
       scopes:
-        read: example read scope
-        write: example write scope
+        # TODO maybe this could only be allowed through api key?
+        admin: A Stalker administrator
+        owner: An organization's owner authorized operations
+        # TODO is this the name we decided?
+        manager: An organization's manager authorized operations
+        viewer: An organization's viewer authorized operations
+
+        user: Generic app user
