--- a/api/organization.yaml
+++ b/api/organization.yaml
@@ -12,14 +12,14 @@ properties:
     type: string
   # reference to LDAP configuration
   ldapConfiguration:
-    $ref: "ldapConfiguration.yml"
+    $ref: "ldapConfiguration.yaml"
     description: URL or IP address of the LDAP server of the organization. Useful only if the organization is private.
   # reference to Place
   places:
     type: array
     description: list of places within this organization
     items:
-      $ref: "place.yml"
+      $ref: "place.yaml"
   # if @private == true a user can't be anonymous
   private:
     type: boolean
