--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,33 +1,37 @@
 {
   "recommendations": [
+    // API
     "42Crunch.vscode-openapi",
+    "arjun.swagger-viewer",
+    "redhat.vscode-yaml",
+    // DOCKER
+    "exiasr.hadolint",
+    "ms-azuretools.vscode-docker",
+    // DOCUMENTATION
     "ban.spellright",
     "DavidAnson.vscode-markdownlint",
-    "dbaeumer.vscode-eslint",
-    "eamodio.gitlens",
-    "esbenp.prettier-vscode",
-    "GabrielBB.vscode-lombok",
-    "ghmcadams.lintlens",
-    "GitHub.vscode-pull-request-github",
-    "Gruntfuggly.todo-tree",
     "jebbs.plantuml",
+    "yzhang.markdown-all-in-one",
+    // GIT
+    "GitHub.vscode-pull-request-github",
+    "eamodio.gitlens",
     "mhutchie.git-graph",
-    "ms-azuretools.vscode-docker",
-    "Orta.vscode-jest",
+    // JAVA + SPRING
+    "GabrielBB.vscode-lombok",
     "pflannery.vscode-versionlens",
+    "pivotal.vscode-spring-boot",
     "redhat.java",
-    "redhat.vscode-xml",
-    "redhat.vscode-yaml",
-    "ryanluker.vscode-coverage-gutters",
-    "Shan.code-settings-sync",
     "shengchen.vscode-checkstyle",
-    "slevesque.vscode-autohotkey",
     "VisualStudioExptTeam.vscodeintellicode",
     "vscjava.vscode-java-debug",
+    "vscjava.vscode-java-dependency",
     "vscjava.vscode-java-test",
     "vscjava.vscode-maven",
-    "vscjava.vscode-spring-initializr",
+    "vscjava.vscode-spring-boot-dashboard",
+    // OTHER
+    "Gruntfuggly.todo-tree",
+    "redhat.vscode-xml",
+    "ryanluker.vscode-coverage-gutters",
     "wmaurer.vscode-jumpy",
-    "yzhang.markdown-all-in-one",
   ]
 }
