--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
-version: '3'
+version: "3"
 services:
   mysql:
     container_name: mysqlc
     build: ./db/relational
     #restart: always
     environment:
-      MYSQL_DATABASE: 'stalkerDB'
+      MYSQL_DATABASE: "stalkerDB"
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'gruppone'
+      MYSQL_USER: "gruppone"
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'GruppOne'
+      MYSQL_PASSWORD: "GruppOne"
       # User for root access: root
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'rootGruppOne'
+      MYSQL_ROOT_PASSWORD: "rootGruppOne"
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+      - "3306:3306"
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - "3306"
     # Where our data will be persisted
     volumes:
       - ./db/relational/mysqldb:/var/lib/mysql
@@ -28,15 +28,15 @@ services:
     build: ./db/time-series
     #restart: always
     environment:
-      INFLUXDB_DB: 'stalkerDB'
-      INFLUXDB_ADMIN_USER: 'root'
-      INFLUXDB_ADMIN_PASSWORD: 'rootGruppOne'
-      INFLUXDB_USER: 'gruppone'
-      INFLUXDB_USER_PASSWORD: 'GruppOne'
+      INFLUXDB_DB: "stalkerDB"
+      INFLUXDB_ADMIN_USER: "root"
+      INFLUXDB_ADMIN_PASSWORD: "rootGruppOne"
+      INFLUXDB_USER: "gruppone"
+      INFLUXDB_USER_PASSWORD: "GruppOne"
     ports:
-      - '8086:8086'
+      - "8086:8086"
     expose:
-      - '8086'
+      - "8086"
     volumes:
       - .db/time-series/influxdb:/var/lib/influxdb/data
     #after docker-compose, run 'docker exec -it influxdbc /bin/bash' and after digits 'influx'
