fix: fix environment part in docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
 # Example .env file for stalker-server
 # ALL VARIABLES ARE MANDATORY
+#MY_SQL
+
+MYSQL_DATABASE: "example-dbname"
+MYSQL_USER: "example-user"
+MYSQL_PASSWORD: "example-password"
+# User for root access: root (default)
+MYSQL_ROOT_PASSWORD: "example-root-password"
+
+#INFLUXDB
+INFLUXDB_DB: "example-dbname"
+INFLUXDB_USER: "example-user"
+INFLUXDB_USER_PASSWORD: "example-user-password"
+INFLUXDB_ADMIN_USER: "example-admin-user"
+INFLUXDB_ADMIN_PASSWORD: "example-admin-password"
+
+
