--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,8 @@ services:
     container_name: mysqlc
     build: ./db/relational
     #restart: always
-    environment:
-      MYSQL_DATABASE: "stalkerDB"
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: "gruppone"
-      # You can use whatever password you like
-      MYSQL_PASSWORD: "GruppOne"
-      # User for root access: root
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: "rootGruppOne"
+    env_file:
+      - mysql.env
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - "3306:3306"
@@ -27,12 +20,8 @@ services:
     container_name: influxdbc
     build: ./db/time-series
     #restart: always
-    environment:
-      INFLUXDB_DB: "stalkerDB"
-      INFLUXDB_ADMIN_USER: "root"
-      INFLUXDB_ADMIN_PASSWORD: "rootGruppOne"
-      INFLUXDB_USER: "gruppone"
-      INFLUXDB_USER_PASSWORD: "GruppOne"
+    env_file:
+      - influxdb.env
     ports:
       - "8086:8086"
     expose:
